// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keyring derives correct keys from seed 1`] = `
Object {
  "encryptionKey": "jRKRy3oPhXpUBrFJefO2CJnWw/IoalOPuepAwvTqrEk=",
  "managementKey": "0350966498e802a007513d518dc12a0a0ab1e48addcec1beaa989c6ff5f5ed226c",
  "signingKey": "027ab5238257532f486cbeeac59a5721bbfec2f13c3d26516ca9d4c5f0ec1aa229",
}
`;

exports[`Keyring derives correct keys from seed 2`] = `
Object {
  "encryptionKey": "jRKRy3oPhXpUBrFJefO2CJnWw/IoalOPuepAwvTqrEk=",
  "managementKey": "0350966498e802a007513d518dc12a0a0ab1e48addcec1beaa989c6ff5f5ed226c",
  "signingKey": "027ab5238257532f486cbeeac59a5721bbfec2f13c3d26516ca9d4c5f0ec1aa229",
}
`;

exports[`Keyring signs data correctly 1`] = `
Object {
  "r": "c896c3198ae31e3038bb22bf1a7da49c3f3a77a5e8a41fc19cdb275532583205",
  "recoveryParam": 0,
  "s": "bd1387127e4a31b89ac8e103be6d7939c26adb13b6450968b10049f662b407ce",
}
`;

exports[`Keyring signs data correctly 2`] = `
Object {
  "r": "244a23056eba642037ab0606f08ce5a077ab6041e92977a9f65727a6be1b3497",
  "recoveryParam": 1,
  "s": "fb984e09a3eb1358fea41858e1fbfd3b453e1d8204f800ddf53ee81eaf0d30f6",
}
`;

exports[`Keyring signs data correctly 3`] = `
Object {
  "r": "b04fb687a16254cff30acee7f41fe3bf5e5d1d583c34ab869abae46e2dafa16c",
  "recoveryParam": 0,
  "s": "15d604fe58f44d349591ed36fb386f7b211c8e337bb115651d64199268ef752b",
}
`;
